# yul2venom

./: .gitignore  .gitmodules  .venv  AGENTS.md  CONTRIBUTING.md  LICENSE  MISSING_FEATURES.md  NOTICE  OVERVIEW.md  README.md  __init__.py  abi_decode_handler.py  benchmark_data.json  benchmark_full_data.json  benchmark_report.md  config.py  demo.sh  optimizer.py  pyproject.toml  requirements.txt  run_infrastructure_test.sh  run_tests.sh  run_venom.py  test_hardcoded_optimization.py  transpiler.py  venom_generator.py  verify.sh  yul2venom.config.yaml  yul2venom.py  yul_extractor.py  yul_parser.py  yul_source_optimizer.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: __init__.py  run_venom.py
configs/: AdvancedFeatures.yul2venom.json  AllocTest.yul2venom.json  ComplexFeaturesTest.yul2venom.json  ConstantTest.yul2venom.json  ControlFlow.yul2venom.json  Debug.yul2venom.json  ExternalLibrary.yul2venom.json  LoopCheck.yul2venom.json  LoopCheckCalldata.yul2venom.json  LoopSwitchRepro.yul2venom.json  MegaTest.yul2venom.json  MinimalCall.yul2venom.json  MinimalLoop.yul2venom.json  MissingFeatures.yul2venom.json  MultiReturnTest.yul2venom.json  NoSelector.yul2venom.json  OpcodeBasics.yul2venom.json  RevertWithData.yul2venom.json  SimpleAdd.yul2venom.json  SimpleMath.yul2venom.json  StorageMemory.yul2venom.json  StorageMemoryTest.yul2venom.json  StructLayoutTest.yul2venom.json  TinyCall.yul2venom.json  TryCatchRepro.yul2venom.json  VoidCall.yul2venom.json
core/: __init__.py  errors.py  pipeline.py
debug/: BUG_CONTEXT.md  benchmark_smoke.json  benchmark_smoke.md  benchmark_smoke_gas.json  benchmark_smoke_gas.md  benchmark_smoke_postfix.json  benchmark_smoke_postfix.md  calldata_raw_ir.vnm  config_benchmark.json  minimal_raw_ir.vnm  opt_ir.vnm  raw_ir.vnm  runtime_bytecode.hex  venom_ir.vnm
docs/: AUDIT_0.md  AUDIT_1.md  AUDIT_2.md  AUDIT_review.md  PURE_SSA_ANALYSIS.md  REFERENCE.md  VENOM_BACKEND_RESEARCH.md  VENOM_CHANGES.md  VENOM_FIXES.md  VENOM_IR_RESEARCH.md  VENOM_NATIVE_REQUIREMENTS.md
foundry/: foundry.toml
generator/: __init__.py  optimizations.py  venom_generator.py
ir/: __init__.py  basicblock.py  context.py  function.py
optimizer/: __init__.py  yul_source_optimizer.py
output/: AddressUtils.yul  AdvancedFeatures_opt.yul  AllocTest_opt.yul  Arithmetic_opt.yul  ArrayLib.yul  ArrayUtils.yul  Base.yul  CallLibrary.yul  ComplexFeaturesTest_opt.yul  ConstantTest.yul  ControlFlow_opt.yul  DataStructures_opt.yul  Edge_opt.yul  Encoding_opt.yul  Events_opt.yul  ExternalLibrary.yul  ExternalLibraryTest_opt.yul  Functions.yul  Functions_opt.yul  InitArrayTest_opt.yul  InitCodeTest.yul  InitCodeTest_31_deployed.vnm  InitCodeTest_31_deployed_opt.vnm  InitCodeTest_init.asm  InitCodeTest_init.vnm  InitCodeTest_init_opt.vnm  InitComplexTest_opt.yul  InitConstructorArgsTest_55_deployed.vnm  InitConstructorArgsTest_55_deployed_opt.vnm  InitConstructorArgsTest_init.asm  InitConstructorArgsTest_init.vnm  InitConstructorArgsTest_init_opt.vnm  InitConstructorArgsTest_opt.yul  InitImmutableTest.yul  InitInheritanceTest.yul  InitMultiImmutableTest_opt.yul  InitNewChildTest.yul  InitPayableTest_opt.yul  InitStringTest.yul  Libraries_opt.yul  (+32 more)
output_native/: LoopCheckCalldata.bin-runtime  loop_test_struct.ir  loop_test_struct_venom_runtime.vnm  vyper_comprehensive.ir  vyper_comprehensive_venom_deploy.vnm  vyper_comprehensive_venom_runtime.vnm  vyper_loop_test.ir  vyper_loop_test_venom_deploy.vnm  vyper_loop_test_venom_runtime.vnm  vyper_mega_test.ir  vyper_mega_test_venom_deploy.vnm  vyper_mega_test_venom_runtime.vnm  vyper_nested_loop.ir  vyper_nested_loop_venom_runtime.vnm  vyper_struct_array.ir
parser/: __init__.py  yul_extractor.py  yul_parser.py
scripts/: pre-commit  security_audit.py
utils/: env.py  (+3 more)
(+210 files in other folders)
