[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yul2venom"
version = "0.1.0"
description = "Yul-to-Venom IR transpiler for Vyper's optimization pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Gleb Radchenko"}
]
keywords = ["ethereum", "yul", "venom", "vyper", "solidity", "transpiler", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
]

dependencies = [
    "lark>=1.1.0",
    "cbor2>=5.4.0",
    "pycryptodome>=3.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "py-evm>=0.7.0",
]

[project.scripts]
yul2venom = "yul2venom:main"

[project.urls]
"Homepage" = "https://github.com/GlebRadchenko/yul2venom"
"Repository" = "https://github.com/GlebRadchenko/yul2venom"

[tool.setuptools]
py-modules = ["yul2venom", "transpiler", "venom_generator", "yul_parser", "yul_extractor", "optimizer", "run_venom"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ir*", "testing*"]

[tool.ruff]
# Target Python 3.11
target-version = "py311"

# Exclude vyper submodule
exclude = ["vyper/"]

[tool.ruff.lint]
# Select rules to check
select = ["E", "F", "W"]

# Ignore common patterns that are intentional in this codebase
ignore = [
    "E402",  # Module level import not at top of file (conditional imports)
    "E701",  # Multiple statements on one line (compact code style)
    "E702",  # Multiple statements on one line (semicolon)
    "E722",  # Do not use bare except (intentional fallback handling)
    "E741",  # Ambiguous variable name (l, O, I)
    "F401",  # Imported but unused (re-exports, type hints)
    "F541",  # f-string without placeholders (consistent formatting)
    "F811",  # Redefinition of unused name (conditional imports)
    "F841",  # Local variable assigned but never used (intentional debugging)
]

[tool.ruff.lint.per-file-ignores]
# Allow star imports and unused imports in __init__.py files
"__init__.py" = ["F401", "F403"]
# Test files can have more relaxed rules
"testing/*" = ["F401", "F841"]
"scripts/*" = ["F401", "F541"]
